# ComfyUI_BaiduTranslate

./: BaiduTranslate.py  README.md  __init__.py  apikey.json  baidu_devapi.json  pyproject.toml  requirements.txt
js/: BaiduTranslate_sign.js
